--- a/event-details/first-event.html
+++ b/event-details/first-event.html
@@ -28,17 +28,19 @@
             <div class="landingImage" data-aos="fade-up" data-aos-duration="2000">
                 <img src="../images/daftar-lomba/first-event.png" alt="">
             </div>
-            <div class="landingText" data-aos="zoom-out-down" data-aos-duration="1000">
-                <center><h2>First Event</h2></center>
+            <div class="daHeader" data-aos="zoom-out-down" data-aos-duration="1000">
+                <center><h1>First Event</h1></center>
                 <hr class="num1" align="center">
                 <hr class="num2" color="#131516" align="center">
-                <center><h3>Event yang diselenggarakan pada tanggal 10 Juli 2020 ini merupakan event pertama yang diadakan oleh Tribe Miawu. Tujuan dibuatnya event ini adalah untuk Meningkatkan kesadaran para Pemain TFM akan keberadaan Tribe Miawu, sekaligus bersilaturahmi. Di Event ini ada berbagai macam lomba, antara lain: <b>Survivor, Tanya Jawab, Cover Lagu, Uno, dan Racing</b>.</h3></center>
+                <center><h3>Event yang diselenggarakan pada tanggal 10 Juli 2020 ini merupakan event pertama yang diadakan oleh Tribe Miawu. Tujuan dibuatnya event ini adalah untuk Meningkatkan kesadaran para Pemain TFM akan keberadaan Tribe Miawu, sekaligus bersilaturahmi. Di Event ini ada berbagai macam lomba, antara lain: <span>Survivor, Tanya Jawab, Cover Lagu, Uno, dan Racing</span>.</h3></center>
             </div>
         </div>
         
         <div class="outer-wrapper">
-            <center><h1 style="color: white;">Images</h1></center>
-            <div class="s-wrap s-type-1" role="slider">
+            <center><h1>Images</h1></center>
+            <hr class="num1" align="center">
+            <hr class="num2" color="#131516" align="center">
+            <br><br><div class="s-wrap s-type-1" role="slider">
               <input type="radio" id="s-1" name="slider-control" checked="checked">
               <input type="radio" id="s-2" name="slider-control">
               <input type="radio" id="s-3" name="slider-control">
