--- a/event-details/first-event.html
+++ b/event-details/first-event.html
@@ -25,7 +25,7 @@
         <!-- LANDING PAGE -->
 
         <div class="landing2">
-            <div class="landingImage" data-aos="fade-up" data-aos-duration="2000">
+            <div class="landingImage2" data-aos="fade-up" data-aos-duration="1000">
                 <img src="../images/daftar-lomba/first-event.png" alt="">
             </div>
             <div class="daHeader" data-aos="zoom-out-down" data-aos-duration="1000">
@@ -36,7 +36,7 @@
             </div>
         </div>
         
-        <div class="outer-wrapper">
+        <div class="outer-wrapper" data-aos="fade-up" data-aos-duration="1000">
             <center><h1>Images</h1></center>
             <hr class="num1" align="center">
             <hr class="num2" color="#131516" align="center">
