--- a/event-details/first-event.html
+++ b/event-details/first-event.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
         <div class="nav">
             <div class="logo">
-                <h4>Miawu - First Event</h4>
+                <h4>Miawu | First Event</h4>
             </div>
         </div>
     
@@ -26,62 +26,105 @@
 
         <div class="landing2">
             <div class="landingImage2" data-aos="fade-up" data-aos-duration="1000">
-                <img src="../images/daftar-lomba/first-event.png" alt="">
+                <img src="../images/first-event-logo.png" alt="">
             </div>
             <div class="daHeader" data-aos="zoom-out-down" data-aos-duration="1000">
                 <center><h1>First Event</h1></center>
+                <b style="color: #AF72FE;">Tipe </b><u style="color: white;"> : Publik (anggota miawu/anggota dari tribe lain bisa mengikuti acara ini)</u>
                 <hr class="num1" align="center">
                 <hr class="num2" color="#131516" align="center">
                 <center><h3>Event yang diselenggarakan pada tanggal 10 Juli 2020 ini merupakan event pertama yang diadakan oleh Tribe Miawu. Tujuan dibuatnya event ini adalah untuk Meningkatkan kesadaran para Pemain TFM akan keberadaan Tribe Miawu, sekaligus bersilaturahmi. Di Event ini ada berbagai macam lomba, antara lain: <span>Survivor, Tanya Jawab, Cover Lagu, Uno, dan Racing</span>.</h3></center>
             </div>
         </div>
-        
-        <div class="outer-wrapper" data-aos="fade-up" data-aos-duration="1000">
+
+        <center><div>
+          <div class="carousel" data-aos="fade-down" data-aos-duration="1000">
             <center><h1>Images</h1></center>
-            <hr class="num1" align="center">
-            <hr class="num2" color="#131516" align="center">
-            <br><br><div class="s-wrap s-type-1" role="slider">
-              <input type="radio" id="s-1" name="slider-control" checked="checked">
-              <input type="radio" id="s-2" name="slider-control">
-              <input type="radio" id="s-3" name="slider-control">
-              <input type="radio" id="s-4" name="slider-control">
-              <input type="radio" id="s-5" name="slider-control">
-              <input type="radio" id="s-6" name="slider-control">
-              <ul class="s-content">
-                <li class="s-item gambar1"></li>
-                <li class="s-item gambar2"></li>
-                <li class="s-item gambar3"></li>
-                <li class="s-item gambar4"></li>
-                <li class="s-item gambar5"></li>
-                <li class="s-item gambar6"></li>
-                <li class="s-item gambar7"></li>
-                <li class="s-item gambar8"></li>
-                <li class="s-item gambar9"></li>
-                <li class="s-item gambar10"></li>
-                <li class="s-item gambar11"></li>
-                <li class="s-item gambar12"></li>
-                <li class="s-item gambar13"></li>
-              </ul>
-              <!-- <div class="s-control">
-                <label class="s-c-1" for="s-1"></label>
-                <label class="s-c-2" for="s-2"></label>
-                <label class="s-c-3" for="s-3"></label>
-                <label class="s-c-4" for="s-4"></label>
-                <label class="s-c-5" for="s-5"></label>
-              </div> -->
-              <div class="s-nav">
-                <label class="s-nav-1 right" for="s-2"></label>
-                <label class="s-nav-2 left" for="s-1"></label>
-                <label class="s-nav-2 right" for="s-3"></label>
-                <label class="s-nav-3 left" for="s-2"></label>
-                <label class="s-nav-3 right" for="s-4"></label>
-                <label class="s-nav-4 left" for="s-3"></label>
-                <label class="s-nav-4 right" for="s-5"></label>
-                <label class="s-nav-5 left" for="s-4"></label>
-                <label class="s-nav-6 left" for="s-4"></label>
+            <center><h2>Sentuh gambar untuk melihat Fullview-nya</h2></center>
+            <ul class="slides">
+              <input type="radio" name="radio-buttons" id="img-1" checked />
+              <li class="slide-container">
+                  <div class="slide-image">
+                    <img src="../images/events/fs-event-camp-1.png">
+                  </div>
+                <div class="carousel-controls">
+                  <label for="img-3" class="prev-slide">
+                    <span>&lsaquo;</span>
+                  </label>
+                  <label for="img-2" class="next-slide">
+                    <span>&rsaquo;</span>
+                  </label>
+                </div>
+              </li>
+              <input type="radio" name="radio-buttons" id="img-2" />
+              <li class="slide-container">
+                <div class="slide-image">
+                  <img src="../images/events/fs-event-camp-2.png">
+                </div>
+                <div class="carousel-controls">
+                  <label for="img-1" class="prev-slide">
+                    <span>&lsaquo;</span>
+                  </label>
+                  <label for="img-3" class="next-slide">
+                    <span>&rsaquo;</span>
+                  </label>
+                </div>
+              </li>
+              <input type="radio" name="radio-buttons" id="img-3" />
+              <li class="slide-container">
+                <div class="slide-image">
+                  <img src="../images/events/fs-event-racing-win.png">
+                </div>
+                <div class="carousel-controls">
+                  <label for="img-3" class="prev-slide">
+                    <span>&lsaquo;</span>
+                  </label>
+                  <label for="img-4" class="next-slide">
+                    <span>&rsaquo;</span>
+                  </label>
+                </div>
+              </li>
+              <input type="radio" name="radio-buttons" id="img-4" />
+              <li class="slide-container">
+                <div class="slide-image">
+                  <img src="../images/events/fs-event-survivor.png">
+                </div>
+                <div class="carousel-controls">
+                  <label for="img-3" class="prev-slide">
+                    <span>&lsaquo;</span>
+                  </label>
+                  <label for="img-5" class="next-slide">
+                    <span>&rsaquo;</span>
+                  </label>
+                </div>
+              </li>
+              <input type="radio" name="radio-buttons" id="img-5" />
+              <li class="slide-container">
+                <div class="slide-image">
+                  <img src="../images/events/fs-event-tanyajawab.png">
+                </div>
+                <div class="carousel-controls">
+                  <label for="img-4" class="prev-slide">
+                    <span>&lsaquo;</span>
+                  </label>
+                  <label for="img-1" class="next-slide">
+                    <span>&rsaquo;</span>
+                  </label>
+                </div>
+              </li>
+              <div class="carousel-dots">
+                <label for="img-1" class="carousel-dot" id="img-dot-1"></label>
+                <label for="img-2" class="carousel-dot" id="img-dot-2"></label>
+                <label for="img-3" class="carousel-dot" id="img-dot-3"></label>
+                <label for="img-4" class="carousel-dot" id="img-dot-4"></label>
+                <label for="img-5" class="carousel-dot" id="img-dot-5"></label>
               </div>
-            </div>
+            </ul>
           </div>
+        </div></center>
+        <div class="caption-after" data-aos="zoom-out-down" data-aos-duration="1000">
+          <center><h1>Klik <a href="https://github.com/miawuu/miawuu.github.io/tree/master/images/events" target="_blank">disini</a> untuk mengunjungi folder gambar</h1></center>
+        </div>
 
         <hr style="border: 2px solid #AF72FE; height: 4px;"><br>
         <center><div class="footer">
