--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
                     <div class="cardContent">
                         <h2>Tujuh Belasan</h2>
                         <p>16 Agustus 2020</p>
+                        <a href="/event-details/tujuh-belasan">
+                            <div class="cardBtn">
+                                <img src="/images/next.png" alt="" class="cardIcon">
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
