--- a/event-details/tujuh-belasan.html
+++ b/event-details/tujuh-belasan.html
@@ -29,7 +29,7 @@
                 <img src="../images/tujuh-belasan-logo.png" alt="">
             </div>
             <div class="daHeader" data-aos="zoom-out-down" data-aos-duration="1000">
-                <center><h1>Tujun belas-an</h1></center>
+                <center><h1>Tujuh belas-an</h1></center>
                 <b style="color: #AF72FE;">Tipe </b><u style="color: white;"> : Lokal (hanya anggota miawu saja yang dapat mengikuti acara ini)</u>
                 <hr class="num1" align="center">
                 <hr class="num2" color="#131516" align="center">
