--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <p>20 Juli 2020</p>
                         <a href="/event-details/first-event">
                             <div class="cardBtn">
-                                <img src="/images/next.png" alt="" class="cardIcon">
+                                <h3 style="color: white; font-size: 15px;">Visit</h3>
                             </div>
                         </a>
                     </div>
@@ -64,7 +64,7 @@
                         <p>16 Agustus 2020</p>
                         <a href="/event-details/tujuh-belasan">
                             <div class="cardBtn">
-                                <img src="/images/next.png" alt="" class="cardIcon">
+                                <h3 style="color: white; font-size: 15px;">Visit</h3>
                             </div>
                         </a>
                     </div>
@@ -76,27 +76,19 @@
 
             <div class="igeffectSection">
             <div class="ieHeader" data-aos="zoom-in-down" data-aos-duration="1000">
-                <h1>Insta Effect</h1>
+                <h1>Instagram Effect</h1>
                 <hr class="num1" align="center">
                 <hr class="num2" color="#131516" align="center">
             </div>
             <div class="ieCards">
                 <div class="card one" data-aos="fade-down" data-aos-duration="1000">
                     <img src="images/igeffect/effect-1_logo.jpg" class="cardoneImg" alt="" data-aos="zoom-out-down" data-aos-duration="1000">
-                    <div class="cardContent" data-aos="zoom-out-down" data-aos-duration="1000">
-                        <h2><span>‎‎</span>1st</h2>
-                        <h3>Crowns</h3>
-                    </div>
+                    <h3>Crowns</h3>
+                    <center><h4>Status <span style="color: #3B7502; background-color: #DAF2C2; padding: 5px; border-radius: 4px; margin-left: 20px;">Dapat dilihat</span></h4>
+                    <h4 style="margin-right: 5px;">Platform <span style="color: #ffffff; background-image: linear-gradient(to right,rgb(89,84,202), rgb(186,50,181), rgb(247,80,78), rgb(255,199,81)); border-radius: 4px; margin-left: 20px; padding: 5px;">Instagram</span></h4>
+                    <h4>Penerbit <span style="color: #ffffff; background-image: linear-gradient(to right,rgb(89,84,202), #AF72FE); border-radius: 4px; margin-left: 20px; padding: 5px;">@miawu.co</span></h4></center>
                     <a href="https://www.instagram.com/ar/1344132829254048" target="_blank"><center><h1>Visit</h1></center></a>
                 </div>
-                <!-- <div class="card2 two" data-aos="fade-down" data-aos-duration="1000">
-                    <img src="images/igeffect/effect-1_logo.jpg" class="cardtwoImg" alt="">
-                    <div class="cardContent2" data-aos="zoom-out-down" data-aos-duration="1000">
-                        <h2><span>‎‎</span>2nd</h2>
-                        <h3>Belum diketahui</h3>
-                    </div>
-                    <a href="https://www.instagram.com/ar/1344132829254048" target="_blank"><center><h1>Visit</h1></center></a>
-                </div> -->
             </div>
         </div>
 
