--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <hr class="num2" color="#131516" align="center">
             </div>
             <div class="daCards">
-                <div class="card one" data-aos="fade-down" data-aos-duration="3000">
-                    <img src="images/daftar-lomba/first-event.png" class="cardoneImg" alt="" data-aos="zoom-out-down" data-aos-duration="3000">
+                <div class="card one" data-aos="fade-right" data-aos-duration="3000">
+                    <img src="images/daftar-lomba/first-event.png" class="cardoneImg" alt="" data-aos="fade-right" data-aos-duration="3000">
                     <div class="cardContent">
                         <h2>First Event</h2>
                         <p>20 Juli 2020</p>
@@ -57,8 +57,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="card two" data-aos="fade-up" data-aos-duration="3000">
-                    <img src="images/daftar-lomba/17an.png" class="cardtwoImg" alt="" data-aos="zoom-out-down" data-aos-duration="3000">
+                <div class="card two" data-aos="fade-left" data-aos-duration="3000">
+                    <img src="images/daftar-lomba/17an.png" class="cardtwoImg" alt="" data-aos="fade-left" data-aos-duration="3000">
                     <div class="cardContent">
                         <h2>Tujuh Belasan</h2>
                         <p>16 Agustus 2020</p>
