--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <hr class="num2" color="#131516" align="center">
             </div>
             <div class="daCards">
-                <div class="card one" data-aos="fade-right" data-aos-duration="3000">
+                <div class="card one" data-aos="fade-right" data-aos-duration="2000">
                     <img src="images/daftar-lomba/first-event.png" class="cardoneImg" alt="" data-aos="fade-right" data-aos-duration="3000">
                     <div class="cardContent">
                         <h2>First Event</h2>
@@ -57,7 +57,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="card two" data-aos="fade-left" data-aos-duration="3000">
+                <div class="card two" data-aos="fade-left" data-aos-duration="2000">
                     <img src="images/daftar-lomba/17an.png" class="cardtwoImg" alt="" data-aos="fade-left" data-aos-duration="3000">
                     <div class="cardContent">
                         <h2>Tujuh Belasan</h2>
@@ -75,13 +75,13 @@
         <!--IG EFFECT / IE Section -->
 
             <div class="igeffectSection">
-            <div class="ieHeader" data-aos="zoom-in-down" data-aos-duration="1000">
+            <div class="ieHeader" data-aos="flip-up" data-aos-duration="1000">
                 <h1>Instagram Effect</h1>
                 <hr class="num1" align="center">
                 <hr class="num2" color="#131516" align="center">
             </div>
             <div class="ieCards">
-                <div class="card one" data-aos="fade-down" data-aos-duration="1000">
+                <div class="card one" data-aos="flip-down" data-aos-duration="1000">
                     <img src="images/igeffect/effect-1_logo.jpg" class="cardoneImg" alt="" data-aos="zoom-out-down" data-aos-duration="1000">
                     <h3>Crowns</h3>
                     <center><h4>Status <span style="color: #3B7502; background-color: #DAF2C2; padding: 5px; border-radius: 4px; margin-left: 20px;">Dapat dilihat</span></h4>
