update animation duration

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
         <!--IG EFFECT / IE Section -->
 
             <div class="igeffectSection">
-            <div class="ieHeader" data-aos="flip-up" data-aos-duration="1000">
+            <div class="ieHeader" data-aos="flip-up" data-aos-duration="2000">
                 <h1>Instagram Effect</h1>
                 <hr class="num1" align="center">
                 <hr class="num2" color="#131516" align="center">
             </div>
             <div class="ieCards">
-                <div class="card one" data-aos="flip-down" data-aos-duration="1000">
-                    <img src="images/igeffect/effect-1_logo.jpg" class="cardoneImg" alt="" data-aos="zoom-in-up" data-aos-duration="1000">
+                <div class="card one" data-aos="flip-down" data-aos-duration="2000">
+                    <img src="images/igeffect/effect-1_logo.jpg" class="cardoneImg" alt="" data-aos="zoom-in-down" data-aos-duration="3000">
                     <h3>Crowns</h3>
                     <center><h4>Status <span style="color: #3B7502; background-color: #DAF2C2; padding: 5px; border-radius: 4px; margin-left: 20px;">Dapat dilihat</span></h4>
                     <h4 style="margin-right: 5px;">Platform <span style="color: #ffffff; background-image: linear-gradient(to right,rgb(89,84,202), rgb(186,50,181), rgb(247,80,78), rgb(255,199,81)); border-radius: 4px; margin-left: 20px; padding: 5px;">Instagram</span></h4>
