--- a/event-details/1.0.html
+++ b/event-details/1.0.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../images/favicon.png" sizes="16x16">
-    <title>Miawu - First Event</title>
+    <title>Miawu - Event 1.0</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/daftar-acara.css">
     <link rel="stylesheet" href="../css/footer.css">
@@ -18,7 +18,7 @@
     <div class="wrapper">
         <div class="nav">
             <div class="logo">
-                <h4>Miawu | First Event</h4>
+                <h4>Miawu | Event 1.0</h4>
             </div>
         </div>
     
@@ -29,23 +29,25 @@
                 <img src="../images/first-event-logo.png" alt="">
             </div>
             <div class="daHeader" data-aos="zoom-out-down" data-aos-duration="1000">
-                <center><h1>First Event</h1></center>
-                <b style="color: #AF72FE;">Tipe </b><u style="color: white;"> : Publik (anggota miawu/anggota dari tribe lain bisa mengikuti acara ini)</u>
+                <center><h1>1.0</h1></center>
+                <b style="color: white;">Event yang diselenggarakan pada tanggal 10 Juli 2020 ini merupakan event pertama yang diadakan oleh Tribe Miawu. Tujuan dibuatnya event ini adalah untuk Meningkatkan kesadaran para Pemain TFM akan keberadaan Tribe Miawu, sekaligus bersilaturahmi. Di Event ini ada berbagai macam lomba, antara lain: <span>Survivor, Tanya Jawab, Cover Lagu, Uno, dan Racing</b>
                 <hr class="num1" align="center">
                 <hr class="num2" color="#131516" align="center">
-                <center><h3>Event yang diselenggarakan pada tanggal 10 Juli 2020 ini merupakan event pertama yang diadakan oleh Tribe Miawu. Tujuan dibuatnya event ini adalah untuk Meningkatkan kesadaran para Pemain TFM akan keberadaan Tribe Miawu, sekaligus bersilaturahmi. Di Event ini ada berbagai macam lomba, antara lain: <span>Survivor, Tanya Jawab, Cover Lagu, Uno, dan Racing</span>.</h3></center>
+                <center>
+                  <h4>Status <span style="color: #ffffff; background-image: linear-gradient(to right,rgb(89,84,202), #AF72FE); border-radius: 4px; margin-left: 20px; padding: 5px;">Completed</span></h4>
+                  <h4>Type <span style="color: #ffffff; background-image: linear-gradient(to right,rgb(89,84,202), #AF72FE); border-radius: 4px; margin-left: 75px; padding: 5px;">Public</span></h4>
+                </center>
             </div>
         </div>
 
         <center><div>
           <div class="carousel" data-aos="fade-down" data-aos-duration="1000">
             <center><h1>Images</h1></center>
-            <center><h2>Sentuh gambar untuk melihat Fullview-nya</h2></center>
             <ul class="slides">
               <input type="radio" name="radio-buttons" id="img-1" checked />
               <li class="slide-container">
                   <div class="slide-image">
-                    <img src="../images/events/fs-event-camp-1.png">
+                    <img src="../images/events/1.0/fs-event-camp-1.png">
                   </div>
                 <div class="carousel-controls">
                   <label for="img-3" class="prev-slide">
@@ -59,7 +61,7 @@
               <input type="radio" name="radio-buttons" id="img-2" />
               <li class="slide-container">
                 <div class="slide-image">
-                  <img src="../images/events/fs-event-camp-2.png">
+                  <img src="../images/events/1.0/fs-event-camp-2.png">
                 </div>
                 <div class="carousel-controls">
                   <label for="img-1" class="prev-slide">
@@ -73,7 +75,7 @@
               <input type="radio" name="radio-buttons" id="img-3" />
               <li class="slide-container">
                 <div class="slide-image">
-                  <img src="../images/events/fs-event-racing-win.png">
+                  <img src="../images/events/1.0/fs-event-racing-win.png">
                 </div>
                 <div class="carousel-controls">
                   <label for="img-3" class="prev-slide">
@@ -87,7 +89,7 @@
               <input type="radio" name="radio-buttons" id="img-4" />
               <li class="slide-container">
                 <div class="slide-image">
-                  <img src="../images/events/fs-event-survivor.png">
+                  <img src="../images/events/1.0/fs-event-survivor.png">
                 </div>
                 <div class="carousel-controls">
                   <label for="img-3" class="prev-slide">
@@ -101,7 +103,7 @@
               <input type="radio" name="radio-buttons" id="img-5" />
               <li class="slide-container">
                 <div class="slide-image">
-                  <img src="../images/events/fs-event-tanyajawab.png">
+                  <img src="../images/events/1.0/fs-event-tanyajawab.png">
                 </div>
                 <div class="carousel-controls">
                   <label for="img-4" class="prev-slide">
