--- a/event-details/tujuh-belasan.html
+++ b/event-details/tujuh-belasan.html
@@ -30,23 +30,25 @@
             </div>
             <div class="daHeader" data-aos="zoom-out-down" data-aos-duration="1000">
                 <center><h1>Tujuh belas-an</h1></center>
-                <b style="color: #AF72FE;">Tipe </b><u style="color: white;"> : Lokal (hanya anggota miawu saja yang dapat mengikuti acara ini)</u>
+                <b style="color:white;">Diadakan-nya Acara ini adalah untuk memperingati Hari Kemerdekaan RI (17 Agustus), juga Memper-Erat Ikatan Pertemanan dari seluruh Anggota Miawu, nah apa saja sih Lomba-lomba yang diadakan?
+                  berikut adalah daftar lomba-nya: <span>Menggambar dengan Surat ber-tema Kemerdekaan, Fashion Show ber-Penampilan ala Kemerdekaan, Uno, Racing, Circuit, Tanya Jawab, Basket, dan Cerdas Cermat</b>
                 <hr class="num1" align="center">
                 <hr class="num2" color="#131516" align="center">
-                <center><h3>Diadakan-nya Acara ini adalah untuk memperingati Hari Kemerdekaan RI (17 Agustus), juga Memper-Erat Ikatan Pertemanan dari seluruh Anggota Miawu, nah apa saja sih Lomba-lomba yang diadakan?
-                berikut adalah daftar lomba-nya: <span>Menggambar dengan Surat ber-tema Kemerdekaan, Fashion Show ber-Penampilan ala Kemerdekaan, Uno, Racing, Circuit, Tanya Jawab, Basket, dan Cerdas Cermat</span>.</h3></center>
+                <center>
+                  <h4>Status <span style="color: #ffffff; background-image: linear-gradient(to right,rgb(89,84,202), #AF72FE); border-radius: 4px; margin-left: 20px; padding: 5px;">Completed</span></h4>
+                  <h4>Type <span style="color: #ffffff; background-image: linear-gradient(to right,rgb(89,84,202), #AF72FE); border-radius: 4px; margin-left: 80px; padding: 5px;">Local</span></h4>
+                </center>
             </div>
         </div>
 
         <center><div>
             <div class="carousel" data-aos="fade-down" data-aos-duration="1000">
               <center><h1>Images</h1></center>
-              <center><h2>Sentuh gambar untuk melihat Fullview-nya</h2></center>
               <ul class="slides">
                 <input type="radio" name="radio-buttons" id="img-1" checked />
                 <li class="slide-container">
                     <div class="slide-image">
-                      <img src="../images/events/lomba-gambar-1.png">
+                      <img src="../images/events/tujuh-belasan/lomba-gambar-1.png" alt="Onetime#8401">
                     </div>
                   <div class="carousel-controls">
                     <label for="img-3" class="prev-slide">
@@ -60,7 +62,7 @@
                 <input type="radio" name="radio-buttons" id="img-2" />
                 <li class="slide-container">
                   <div class="slide-image">
-                    <img src="../images/events/lomba-gambar-2.png">
+                    <img src="../images/events/tujuh-belasan/lomba-gambar-2.png" alt="Verox1#0000">
                   </div>
                   <div class="carousel-controls">
                     <label for="img-1" class="prev-slide">
@@ -74,7 +76,7 @@
                 <input type="radio" name="radio-buttons" id="img-3" />
                 <li class="slide-container">
                   <div class="slide-image">
-                    <img src="../images/events/lomba-gambar-3.png">
+                    <img src="../images/events/tujuh-belasan/lomba-gambar-3.png" alt="Imnoob#5424">
                   </div>
                   <div class="carousel-controls">
                     <label for="img-2" class="prev-slide">
@@ -88,7 +90,7 @@
                 <input type="radio" name="radio-buttons" id="img-4" />
                 <li class="slide-container">
                   <div class="slide-image">
-                    <img src="../images/events/lomba-gambar-4.png">
+                    <img src="../images/events/tujuh-belasan/lomba-gambar-4.png" alt="Daniimuts#0000">
                   </div>
                   <div class="carousel-controls">
                     <label for="img-3" class="prev-slide">
@@ -102,7 +104,7 @@
                 <input type="radio" name="radio-buttons" id="img-5" />
                 <li class="slide-container">
                   <div class="slide-image">
-                    <img src="../images/events/lomba-gambar-5.png">
+                    <img src="../images/events/tujuh-belasan/lomba-gambar-5.png" alt="Adamjuz#9960">
                   </div>
                   <div class="carousel-controls">
                     <label for="img-4" class="prev-slide">
@@ -116,7 +118,7 @@
                 <input type="radio" name="radio-buttons" id="img-6" />
                 <li class="slide-container">
                   <div class="slide-image">
-                    <img src="../images/events/lomba-gambar-6.png">
+                    <img src="../images/events/tujuh-belasan/lomba-gambar-6.png" alt="Angelmnzz#3256">
                   </div>
                   <div class="carousel-controls">
                     <label for="img-5" class="prev-slide">
@@ -130,7 +132,7 @@
                 <input type="radio" name="radio-buttons" id="img-7" />
                 <li class="slide-container">
                   <div class="slide-image">
-                    <img src="../images/events/lomba-gambar-7.png">
+                    <img src="../images/events/tujuh-belasan/lomba-gambar-7.png" alt="Spieky#0000">
                   </div>
                   <div class="carousel-controls">
                     <label for="img-6" class="prev-slide">
@@ -144,7 +146,7 @@
                 <input type="radio" name="radio-buttons" id="img-8" />
                 <li class="slide-container">
                   <div class="slide-image">
-                    <img src="../images/events/lomba-gambar-8.png">
+                    <img src="../images/events/tujuh-belasan/lomba-gambar-8.png" alt="Yama#2676">
                   </div>
                   <div class="carousel-controls">
                     <label for="img-7" class="prev-slide">
