--- a/index.html
+++ b/index.html
@@ -40,16 +40,17 @@
 
         <div class="daSection">
             <div class="daHeader" data-aos="zoom-in-down" data-aos-duration="1000">
-                <h1>Daftar Acara</h1>
+                <h1>Acara yang sedang berlangsung <br>(OnGoing Events)</h1>
                 <hr class="num1" align="center">
                 <hr class="num2" color="#131516" align="center">
             </div>
-            <div class="daCards">
+            <center><h1 style="font-size: 20px; color: rgb(230, 103, 103); padding: 0px;">Tidak ada Acara yang sedang berlangsung.</h1><span style="color: white; font-size: 15px;">Sentuh tombol dibawah untuk mengunjungi halaman Acara yang telah usai.</span></center>
+            <!-- <div class="daCards">
                 <div class="card one" data-aos="fade-right" data-aos-duration="2000">
                     <img src="images/daftar-lomba/first-event.png" class="cardoneImg" alt="" data-aos="fade-right" data-aos-duration="3000">
                     <div class="cardContent">
-                        <h2>First Event</h2>
-                        <p>20 Juli 2020</p>
+                        <h2>Event Miawu 2.0</h2>
+                        <p>12 Desember 2020</p>
                         <a href="/event-details/first-event">
                             <div class="cardBtn">
                                 <h3 style="color: white; font-size: 15px;">Visit</h3>
@@ -57,19 +58,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="card two" data-aos="fade-left" data-aos-duration="2000">
-                    <img src="images/daftar-lomba/17an.png" class="cardtwoImg" alt="" data-aos="fade-left" data-aos-duration="3000">
-                    <div class="cardContent">
-                        <h2>Tujuh Belasan</h2>
-                        <p>16 Agustus 2020</p>
-                        <a href="/event-details/tujuh-belasan">
-                            <div class="cardBtn">
-                                <h3 style="color: white; font-size: 15px;">Visit</h3>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
+            </div> -->
+            <center><br><button onclick="window.location.href='./completed-events/completed-events'" data-aos="fade-left" data-aos-duration="2000">Visit Completed Events</button></center>
         </div>
 
         <!--IG EFFECT / IE Section -->
