Add Desc to `Event Miawu 2.0`

--- a/event-details/2.0.html
+++ b/event-details/2.0.html
@@ -30,7 +30,7 @@
             </div>
             <div class="daHeader" data-aos="zoom-out-down" data-aos-duration="1000">
                 <center><h1>2.0</h1></center>
-                <b style="color: white;">Description</b>
+                <b style="color: white;">Event yang diselenggarakan pada tanggal 12 Desember 2020 ini merupakan event Kedua yang diadakan oleh Tribe Miawu. Tujuan dibuatnya event ini adalah untuk Meningkatkan kesadaran para Pemain TFM akan keberadaan Tribe Miawu, sekaligus bersilaturahmi. Di Event ini ada berbagai macam lomba, antara lain: <span>Circuit, Parkour, Survivor, Racing, dan Gambar</b>
                 <hr class="num1" align="center">
                 <hr class="num2" color="#131516" align="center">
                 <center>
