--- a/event-details/2.0.html
+++ b/event-details/2.0.html
@@ -34,8 +34,8 @@
                 <hr class="num1" align="center">
                 <hr class="num2" color="#131516" align="center">
                 <center>
-                    <h4>Status <span style="color: #ffffff; background-image: linear-gradient(to right,rgb(89,84,202), #AF72FE); border-radius: 4px; margin-left: 20px; padding: 5px;">Completed</span></h4>
-                    <h4>Type <span style="color: #ffffff; background-image: linear-gradient(to right,rgb(89,84,202), #AF72FE); border-radius: 4px; margin-left: 75px; padding: 5px;">Public</span></h4>
+                    <h4>Status <span style="color: #ffffff; background-image: linear-gradient(to right,rgb(89,84,202), #AF72FE); border-radius: 4px; margin-left: 20px; padding: 5px;">Selesai</span></h4>
+                    <h4>Type <span style="color: #ffffff; background-image: linear-gradient(to right,rgb(89,84,202), #AF72FE); border-radius: 4px; margin-left: 75px; padding: 5px;">Publik</span></h4>
                 </center>
             </div>
         </div>
