--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
         <!--IG EFFECT / IE Section -->
 
             <div class="igeffectSection">
-            <div class="ieHeader" data-aos="flip-up" data-aos-duration="2000">
+            <div class="ieHeader">
                 <h1>Instagram Effect</h1>
                 <hr class="num1" align="center">
                 <hr class="num2" color="#131516" align="center">
             </div>
             <div class="ieCards">
-                <div class="card one" data-aos="flip-down" data-aos-duration="2000">
+                <div class="card one">
                     <img src="images/igeffect/effect-1_logo.jpg" class="cardoneImg" alt="" data-aos="zoom-in-down" data-aos-duration="3000">
                     <h3>Crowns</h3>
                     <center><h4>Status <span style="color: #3B7502; background-color: #DAF2C2; padding: 5px; border-radius: 4px; margin-left: 20px;">Dapat dilihat</span></h4>
