--- a/simply.html
+++ b/simply.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="shortcut icon" href="/images/favicon.png" sizes="16x16">
     <title>Miawu</title>
     <link rel="stylesheet" href="/css/SimplyHover.css">
 </head>
